--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,14 @@ p {
 /* NAVIGATION */
 .cd-side-navigation {
   position: fixed;
-  z-index: 3;
+  /* z-index: 3;
   top: 0;
   left: 0;
   height: 100vh;
-  width: 74px;
+  width: 74px; */
   overflow: hidden;
+  flex: grid;
+  align-content: center;
 }
 .cd-side-navigation::before {
   /* background color of the side navigation */
