--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,7 @@ p {
   -webkit-transition: -webkit-transform 0s 0.5s, opacity 0s 0.5s;
   -moz-transition: -moz-transform 0s 0.5s, opacity 0s 0.5s;
   transition: transform 0s 0.5s, opacity 0s 0.5s;
+  -webkit-animation: fadein 2s;
 }
 .cd-title h1 {
   font-size: 7.5em;
@@ -440,6 +441,13 @@ p {
   align-content: center;
   color: #ffffff;
   max-width: 400px;
+
+  -webkit-animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
 .cd-content {
@@ -511,6 +519,7 @@ p {
   position: fixed;
   bottom: 0;
   left: 50%;
+  -webkit-animation: fadein 5s;
 }
 /* LOADING BAR */
 #cd-loading-bar {
