--- a/css/style.css
+++ b/css/style.css
@@ -530,8 +530,8 @@ p {
   font-style: normal;
   font-size: 1.5em;
   line-height: 1.5;
-  line-height: 1.5;
-  color: #000000;
+  padding-top: 1em;
+  color: #ffffff;
   text-align: left;
 }
 .fruits {
