--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,16 @@ html {
 }
 /* TRADITIONAL TYPOGRAPHIC SCALE */
 h1 {
-  font-family:'mrs-eaves-xl-serif', 'Cormorant Upright', serif;
+  font-family: "mrs-eaves-xl-serif", "Cormorant Upright", serif;
   font-weight: 800;
   font-style: italic;
   line-height: 1em;
   font-size: 3em;
-  padding-bottom: .5em;
+  padding-bottom: 0.5em;
 }
 
 h2 {
-  font-family:'mrs-eaves-xl-serif', 'Cormorant Upright', serif;
+  font-family: "mrs-eaves-xl-serif", "Cormorant Upright", serif;
   font-weight: 800;
   font-style: italic;
   font-size: 5em;
@@ -20,7 +20,7 @@ h2 {
 }
 
 h3 {
-  font-family: 'open-sans', sans-serif;
+  font-family: "open-sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 1.5em;
@@ -29,15 +29,15 @@ h3 {
 }
 
 h4 {
-  font-family:'mrs-eaves-xl-serif', 'Cormorant Upright', serif;
+  font-family: "mrs-eaves-xl-serif", "Cormorant Upright", serif;
   font-weight: 800;
   font-style: italic;
   font-size: 6em;
-  line-height: 1.1em;;
+  line-height: 1.1em;
 }
 
 h5 {
-  font-family:'mrs-eaves-xl-serif', 'Cormorant Upright', serif;
+  font-family: "mrs-eaves-xl-serif", "Cormorant Upright", serif;
   font-weight: 800;
   font-style: italic;
   font-size: 2.5em;
@@ -45,15 +45,15 @@ h5 {
 }
 
 h6 {
-  font-family:'mrs-eaves-xl-serif', 'Cormorant Upright', serif;
-  font-size: 1.5em; 
-  line-height: .5em;
+  font-family: "mrs-eaves-xl-serif", "Cormorant Upright", serif;
+  font-size: 1.5em;
+  line-height: 0.5em;
 }
 
 /* PARAGRAPHS */
 p {
   max-width: 50%;
-  font-family: 'open-sans', sans-serif;
+  font-family: "open-sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 1.5em;
@@ -74,7 +74,7 @@ p {
 }
 .cd-side-navigation::before {
   /* background color of the side navigation */
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -95,7 +95,7 @@ p {
 .cd-side-navigation a {
   display: block;
   position: relative;
-  padding: 4em 0 1.5em;
+  padding: 0;
   font-size: 1.2rem;
   text-align: center;
   color: #131519;
@@ -122,7 +122,7 @@ p {
 }
 .cd-side-navigation a::after {
   /* 4px line to the right of the item - visible on hover */
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: -4px;
@@ -141,11 +141,13 @@ p {
 .no-touch .cd-side-navigation a:hover::after {
   opacity: 1;
 }
-.cd-side-navigation a.selected, .no-touch .cd-side-navigation a.selected:hover {
+.cd-side-navigation a.selected,
+.no-touch .cd-side-navigation a.selected:hover {
   background-color: #131519;
   color: #131519;
 }
-.cd-side-navigation a.selected > svg *, .no-touch .cd-side-navigation a.selected:hover > svg * {
+.cd-side-navigation a.selected > svg *,
+.no-touch .cd-side-navigation a.selected:hover > svg * {
   stroke: #83b0b9;
 }
 .cd-side-navigation li:nth-of-type(2) .selected > svg *,
@@ -169,18 +171,21 @@ p {
 .cd-side-navigation li:nth-of-type(4) a::after {
   background-color: #e4b162;
 }
-@media only screen and (min-width: 480px) {
+
+/* ---------------------- */
+/* BEGIN SMALL SCREENS ONLY */
+/* -- NAVIGATION STYLES -- */
+@media (max-width: 767px) {
   .cd-side-navigation {
-    width: 94px;
+    height: auto;
+    width: 100%;
   }
-  .cd-side-navigation a {
-    padding: 4em 0 1.5em;
-    font-size: 1.3rem;
-  }
-  .cd-side-navigation a svg {
-    top: 1.6em;
+  .cd-side-navigation ul {
+    display: flex;
   }
 }
+/* END SMALL SCREENS ONLY */
+/* ---------------------- */
 
 /* MAIN */
 .cd-main {
@@ -227,23 +232,22 @@ p {
   position: relative;
   height: 100vh;
   width: 100%;
-  /* background: #785E91; */
-  background: #223E26;
+  background: #785e91;
   overflow: hidden;
   text-align: center;
   display: inline-block;
 }
-.cd-section.boxes header {
-  background-color: #7C4857;
+.cd-section.boxes {
+  background-color: #7c4857;
 }
 .cd-section.starter header {
-  background-color: #7C4857;
+  background-color: #7c4857;
 }
 .cd-section.weekly header {
-  background-color: #7C4857;
+  background-color: #7c4857;
 }
 .cd-section.monthly header {
-  background-color: #7C4857;
+  background-color: #7c4857;
 }
 .cd-section.recipes header {
   background-color: #445880;
@@ -258,7 +262,10 @@ p {
   background-color: #445880;
 }
 .cd-section.account header {
-  background-color: #223E26;
+  background-color: #223e26;
+}
+.cd-section.account {
+  background: #223e26;
 }
 .cd-section .cd-scroll {
   /* this is the arrow at the bottom of the header */
@@ -266,9 +273,10 @@ p {
   position: absolute;
   bottom: 60px;
   left: -webkit-calc(50vw - (74px - 4px)/2);
-  left: calc(50vw - (74px - 4px)/2);
+  left: calc(50vw - (74px - 4px) / 2);
   width: 44px;
   height: 44px;
+  left: 50%;
   /* image replacement */
   overflow: hidden;
   text-indent: 100%;
@@ -315,7 +323,20 @@ p {
   -moz-animation-iteration-count: 2;
   animation-iteration-count: 2;
 }
-@media only screen and (min-width: 480px) {
+
+/* ---------------------- */
+/* BEGIN SMALL SCREENS ONLY */
+/* -- CD SECTION STYLES -- */
+@media (max-width: 767px) {
+  .cd-section {
+    padding-left: 0;
+    font-size: 0.8em;
+  }
+}
+/* END SMALL SCREENS ONLY */
+/* ---------------------- */
+
+/* @media only screen and (min-width: 480px) {
   .cd-section {
     padding-left: 90px;
   }
@@ -323,7 +344,7 @@ p {
     left: -webkit-calc(50vw - (94px - 4px)/2);
     left: calc(50vw - (94px - 4px)/2);
   }
-}
+} */
 
 @-webkit-keyframes cd-scroll-down {
   0% {
@@ -374,9 +395,9 @@ p {
   position: absolute;
   top: 50%;
   left: 0;
+  width: 100%;
   text-align: center;
   display: inline-block;
-  width: calc(100vw - 90px);
   padding: 1em;
   color: #ffffff;
   -webkit-backface-visibility: hidden;
@@ -425,13 +446,26 @@ p {
   -moz-transition: -moz-transform 0.4s 0.3s, opacity 0.4s 0.3s;
   transition: transform 0.4s 0.3s, opacity 0.4s 0.3s;
 }
-@media only screen and (min-width: 768px) {
-  .cd-title h1 h2 {
-    font-size: 1em;
+/* ---------------------- */
+/* BEGIN SMALL SCREENS ONLY */
+/* -- CD TITLE STYLES -- */
+@media (max-width: 767px) {
+  .cd-title {
+    width: 100%;
+  }
+  @keyframes quote {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
 }
+/* END SMALL SCREENS ONLY */
+/* ---------------------- */
 .cd-quote {
-  font-family:'mrs-eaves-xl-serif', 'Cormorant Upright', serif;
+  font-family: "mrs-eaves-xl-serif", "Cormorant Upright", serif;
   font-size: 1em;
   margin: 0 auto;
   position: relative;
@@ -446,12 +480,16 @@ p {
 }
 /* KEYFRAMES FOR FADE */
 @keyframes quote {
-  0% { opacity: 0; }
-  100%   { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
-/* KEYFRAMES TITLE */
-@keyframes title {
+@keyframes TITLE */
+/* @keyframes title {
   0% {
     font-size: 5px;
   }
@@ -463,17 +501,15 @@ p {
   }
 }
 
-
 .cd-content {
   padding: 3em 0;
   background-color: #ffffff;
-  margin-left: -70px;
 }
 .cd-content p {
   width: 100%;
   max-width: 400px;
   margin: 0 auto 2em;
-  font-family: 'open-sans', sans-serif;
+  font-family: "open-sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 1.5em;
@@ -484,7 +520,14 @@ p {
   align-content: center;
   text-align: center;
 }
-@media only screen and (min-width: 768px) {
+/* ---------------------- */
+/* BEGIN SMALL SCREENS ONLY */
+/* -- CD SECTION STYLES -- */
+@media (max-width: 767px) {
+}
+/* END SMALL SCREENS ONLY */
+/* ---------------------- */
+/* @media only screen and (min-width: 768px) {
   .cd-content {
     padding: 4em 0;
   }
@@ -496,7 +539,7 @@ p {
     line-height: 1.5;
     font-size: 1.em;
   }
-}
+} */
 .cd-subpage {
   position: relative;
   height: 100%;
@@ -509,9 +552,9 @@ p {
 }
 .cd-subpage h2 {
   position: fixed;
-  top: .25em;
+  top: 0.25em;
   left: 11.25em;
-  padding: .3em 0;
+  padding: 0.3em 0;
   font-size: 7em;
   font-weight: 700;
   display: inline-block;
@@ -523,9 +566,9 @@ p {
   left: 25%;
 }
 .cd-starter p {
-  margin-bottom: 1.5em;;
+  margin-bottom: 1.5em;
   max-width: 90%;
-  font-family: 'open-sans', sans-serif;
+  font-family: "open-sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 1.5em;
@@ -558,19 +601,19 @@ p {
 }
 #cd-loading-bar.index {
   /* background-color: #478184; */
-  background-color: #223E26;
+  background-color: #223e26;
 }
 #cd-loading-bar.boxes {
-  background-color: #7C4857;
+  background-color: #7c4857;
 }
 #cd-loading-bar.starter {
-  background-color: #7C4857;
+  background-color: #7c4857;
 }
 #cd-loading-bar.weekly {
-  background-color: #7C4857;
+  background-color: #7c4857;
 }
 #cd-loading-bar.monthly {
-  background-color: #7C4857;
+  background-color: #7c4857;
 }
 #cd-loading-bar.recipes {
   background-color: #445880;
@@ -585,16 +628,26 @@ p {
   background-color: #445880;
 }
 #cd-loading-bar.account {
-  background-color: #223E26;
+  background-color: #223e26;
 }
 #cd-loading-bar.loading {
   visibility: visible;
 }
-@media only screen and (min-width: 480px) {
+/* ---------------------- */
+/* BEGIN SMALL SCREENS ONLY */
+/* -- CD SECTION STYLES -- */
+@media (max-width: 767px) {
+  #cd-loading-bar {
+    left: 0;
+  }
+}
+/* END SMALL SCREENS ONLY */
+/* ---------------------- */
+/* @media only screen and (min-width: 480px) {
   #cd-loading-bar {
     left: 90px;
   }
-}
+} */
 
 /* BUTTON */
 .btn-grp button a {
@@ -602,9 +655,9 @@ p {
   color: #ffffff;
   border: 1px solid;
   font: inherit;
-  margin: .2em;
+  margin: 0.2em;
   padding: 0 2em 0 2em;
-  font-family:'mrs-eaves-xl-serif', 'Cormorant Upright', serif;
+  font-family: "mrs-eaves-xl-serif", "Cormorant Upright", serif;
   font-size: 2em;
   position: relative;
   height: 100%;
@@ -618,9 +671,9 @@ a {
   color: #ffffff;
   border: 1px solid;
   font: inherit;
-  margin: .2em;
+  margin: 0.2em;
   padding: 0 2em 0 2em;
-  font-family:'mrs-eaves-xl-serif', 'Cormorant Upright', serif;
+  font-family: "mrs-eaves-xl-serif", "Cormorant Upright", serif;
   font-size: 2em;
   position: relative;
   height: 100%;
@@ -630,7 +683,8 @@ a {
   text-decoration: none;
 }
 
-button::before, button::after {
+button::before,
+button::after {
   box-sizing: inherit;
   content: "";
   position: absolute;
@@ -641,7 +695,8 @@ button::before, button::after {
 .draw {
   transition: color 0.25s;
 }
-.draw::before, .draw::after {
+.draw::before,
+.draw::after {
   border: 2px solid transparent;
   width: 0;
   height: 0;
@@ -657,7 +712,8 @@ button::before, button::after {
 .draw:hover {
   color: #60daaa;
 }
-.draw:hover::before, .draw:hover::after {
+.draw:hover::before,
+.draw:hover::after {
   width: 100%;
   height: 100%;
 }
@@ -669,7 +725,8 @@ button::before, button::after {
 .draw:hover::after {
   border-bottom-color: #60daaa;
   border-left-color: #60daaa;
-  transition: border-color 0s ease-out 0.5s, width 0.25s ease-out 0.5s, height 0.25s ease-out 0.75s;
+  transition: border-color 0s ease-out 0.5s, width 0.25s ease-out 0.5s,
+    height 0.25s ease-out 0.75s;
 }
 
 .meet:hover {
@@ -680,12 +737,12 @@ button::before, button::after {
   left: 0;
 }
 .meet:hover::before {
-  border-top-color: #223E26;
-  border-right-color: #223E26;
+  border-top-color: #223e26;
+  border-right-color: #223e26;
 }
 .meet:hover::after {
-  border-bottom-color: #223E26;
-  border-left-color: #223E26;
+  border-bottom-color: #223e26;
+  border-left-color: #223e26;
   transition: height 0.25s ease-out, width 0.25s ease-out 0.25s;
 }
 
@@ -698,15 +755,15 @@ button::before, button::after {
 .form {
   position: relative;
   z-index: 1;
-  background: #FFFFFF;
+  background: #ffffff;
   max-width: 360px;
-  margin: 0 auto 100px;
+  margin: 0 auto 100px auto;
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .form input {
-  font-family: 'open-sans', sans-serif;
+  font-family: "open-sans", sans-serif;
   outline: 0;
   background: #f2f2f2;
   width: 100%;
@@ -717,21 +774,23 @@ button::before, button::after {
   font-size: 14px;
 }
 .form button {
-  font-family: 'open-sans', sans-serif;
+  font-family: "open-sans", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #223E26;
+  background: #223e26;
   width: 100%;
   border: 0;
   padding: 15px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 14px;
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
 }
-.form button:hover,.form button:active,.form button:focus {
-  background: #223E26;
+.form button:hover,
+.form button:active,
+.form button:focus {
+  background: #223e26;
 }
 .form .message {
   margin: 15px 0 0;
@@ -739,7 +798,7 @@ button::before, button::after {
   font-size: 12px;
 }
 .form .message a {
-  color: #4CAF50;
+  color: #4caf50;
   font-size: 1em;
   text-decoration: none;
   border: none;
@@ -753,7 +812,8 @@ button::before, button::after {
   max-width: 300px;
   margin: 0 auto;
 }
-.container:before, .container:after {
+.container:before,
+.container:after {
   content: "";
   display: block;
   clear: both;
@@ -778,14 +838,14 @@ button::before, button::after {
   text-decoration: none;
 }
 .container .info span .fa {
-  color: #EF3B3A;
+  color: #ef3b3a;
 }
 body {
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
+  /* background: -webkit-linear-gradient(right, #76b852, #8DC26F);
   background: -moz-linear-gradient(right, #76b852, #8DC26F);
   background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
+  background: linear-gradient(to left, #76b852, #8DC26F); */
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+  -moz-osx-font-smoothing: grayscale;
 }
