--- a/css/style.css
+++ b/css/style.css
@@ -135,43 +135,6 @@ p {
   transition: opacity 0.2s;
   pointer-events: none;
 }
-.no-touch .cd-side-navigation a:hover {
-  background-color: #08090b;
-}
-.no-touch .cd-side-navigation a:hover::after {
-  opacity: 1;
-}
-.cd-side-navigation a.selected,
-.no-touch .cd-side-navigation a.selected:hover {
-  background-color: #131519;
-  color: #131519;
-}
-.cd-side-navigation a.selected > svg *,
-.no-touch .cd-side-navigation a.selected:hover > svg * {
-  stroke: #83b0b9;
-}
-.cd-side-navigation li:nth-of-type(2) .selected > svg *,
-.cd-side-navigation li:nth-of-type(2) .selected:hover > svg * {
-  stroke: #d35657;
-}
-.cd-side-navigation li:nth-of-type(3) .selected > svg *,
-.cd-side-navigation li:nth-of-type(3) .selected:hover > svg * {
-  stroke: #343943;
-}
-.cd-side-navigation li:nth-of-type(4) .selected > svg *,
-.cd-side-navigation li:nth-of-type(4) .selected:hover > svg * {
-  stroke: #e4b162;
-}
-.cd-side-navigation li:nth-of-type(2) a::after {
-  background-color: #d35657;
-}
-.cd-side-navigation li:nth-of-type(3) a::after {
-  background-color: #343943;
-}
-.cd-side-navigation li:nth-of-type(4) a::after {
-  background-color: #e4b162;
-}
-
 /* ---------------------- */
 /* BEGIN SMALL SCREENS ONLY */
 /* -- NAVIGATION STYLES -- */
@@ -332,6 +295,10 @@ p {
     padding-left: 0;
     overflow: hidden;
     font-size: 0.8em;
+    margin-top: 7em;
+  }
+  .cd-scroll {
+    margin-bottom: 3em;
   }
 }
 /* END SMALL SCREENS ONLY */
@@ -400,6 +367,7 @@ p {
   text-align: center;
   display: inline-block;
   color: #ffffff;
+  overflow: hidden;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   -webkit-transform: translateZ(0);
@@ -504,6 +472,7 @@ p {
 .cd-content {
   padding: 3em 0;
   background-color: #ffffff;
+  overflow: hidden;
 }
 .cd-content p {
   width: 100%;
