--- a/css/style.css
+++ b/css/style.css
@@ -536,6 +536,8 @@ p {
   -webkit-animation: quote 5s;
 }
 .box-img {
+  max-width: 100%;
+  max-height: 100%;
   position: fixed;
   top: 10%;
   left: 10%;
