--- a/css/style.css
+++ b/css/style.css
@@ -549,10 +549,14 @@ p {
   .fruits {
     bottom: 0;
     left: 45%;
+    max-width: 100%;
+    max-height: 100%;
   }
   .box-img {
     top: 10%;
     left: 5%;
+    max-width: 100%;
+    max-height: 100%;
   }
 }
 /* END SMALL SCREENS ONLY */
