--- a/css/style.css
+++ b/css/style.css
@@ -444,15 +444,20 @@ p {
 /* @keyframes TITLE */
 @keyframes title {
   0% {
-    font-size: 5px;
+    position: absolute;
+    top: -5em;
+    opacity: 0;
   }
-  30% {
-    font-size: 13px;
+  75% {
+    position: absolute;
+    top: 50%;
+    opacity: 1;
   }
   100% {
-    font-size: 10px;
+    opacity: 100;
   }
 }
+
 
 .cd-content {
   padding: 3em 0;
